Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <a class="enlacepringles" href="pringles.html">Comprar pringles</a>
   </ol>
 </section>
-<button id="boton" type="submit">Clicame</button>
+<button id="boton" type="submit">Clicame para mostrar el mensaje de bienvenida</button>
   </article>
     <footer>
   <p class="copyright">Copyright 2024 ♠            <a href="mailto: ismael.faraji.faraji@insjoanoliver.cat " class="contacto">Contáctame aqui</a><a class="retorno" href="#tab">Volver al inicio</a></p>
