--- a/nintendo.html
+++ b/nintendo.html
@@ -9,7 +9,7 @@
 
 <body>
 Aqui puedes comprar Nintendo Switch. <br>
-<button><a href="disney.html">Volver al portfolio</a></button>
+<button><a href="index.html">Volver al portfolio</a></button>
 </body>
 
 </html>
