Actualizar pringles.html

--- a/pringles.html
+++ b/pringles.html
@@ -9,7 +9,7 @@
 
 <body>
 Aqui puedes comprar pringles <br>
-<button><a href="disney.html">Volver al portfolio</a></button>
+<button><a href="index.html">Volver al portfolio</a></button>
 
 </body>
 
