Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
   </ol>
 </section>
 <button id="boton" type="submit">Clicame para mostrar el mensaje de bienvenida</button>
+<!-- modify this form HTML and place wherever you want your form -->
+<form
+  action="https://formspree.io/f/mannprdd"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
   </article>
     <footer>
   <p class="copyright">Copyright 2024 ♠            <a href="mailto: ismael.faraji.faraji@insjoanoliver.cat " class="contacto">Contáctame aqui</a><a class="retorno" href="#tab">Volver al inicio</a></p>
