--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </label>
   <label>
     Your message:
-    <textarea name="message"></textarea>
+    <input type="text" name="message" >
   </label>
   <!-- your other form fields go here -->
   <button type="submit">Send</button>
