Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <button id="boton" type="submit">Clicame para mostrar el mensaje de bienvenida</button>
 <!-- modify this form HTML and place wherever you want your form -->
 <form
-  action="https://formspree.io/f/mannprdd"
+  action="https://formsubmit.co/ismfar@escolacalvet.cat"
   method="POST"
 >
   <label>
