Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <tr class="filas">
 
       <th>Producto</th>
-      <th>Precio</th>
+      <th>Dineros</th>
     </tr>
     <tr class="filas">
       <td>PS5</td>
