Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 </section>
 <section class="explicaciones">
   <ol class="elementos">
-    <li class="ps5">Ps5</li>
-    <p class="explicacion_ps5">La PS5 es una consola desarrollada por <strong>Sony Studios</strong> y es mi consola favorita.</p>
+    <li class="ps5">Què és</li>
+    <p class="explicacion_ps5">Hola, em dic Ismael y aquesta és la meva web sobre l'optativa de programació de l'Institut Joan Oliver, que per cert,<strong>és la meva metèria preferida</strong> i un hobby meu.</p>
   
   <div class="container1">
     <img width="300" height="281" id="image1" src="logo.jpg" alt="Logo de PlayStation">
