Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </section>
 <section class="explicaciones">
   <ol class="elementos">
-    <li class="ps5">Què és</li>
+    <li class="ps5">Què és?</li>
     <p class="explicacion_ps5">Hola, em dic Ismael y aquesta és la meva web sobre l'optativa de programació de l'Institut Joan Oliver, que per cert,<strong>és la meva metèria preferida</strong> i un hobby meu.</p>
   
   <div class="container1">
