--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <p class="explicacion_ps5">Hola, em dic Ismael y aquesta és la meva web sobre l'optativa de programació de l'Institut Joan Oliver, que per cert,<strong>és la meva metèria preferida</strong> i un hobby meu.</p>
   
   <div class="container1">
-    <img width="300" height="281" id="image1" src="logo.jpg" alt="Logo de PlayStation">
+    <img width="300" height="281" id="image1" src="fotoprog.jpg" alt="Logo de Programació">
 <p class="lorem">
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac enim vel felis tempor gravida. Vivamus bibendum, ipsum non facilisis tristique, purus arcu tincidunt purus, a auctor sapien ligula at erat. Suspendisse potenti. In hac habitasse platea dictumst. Donec at sollicitudin eros. Aliquam erat volutpat. Integer sagittis turpis sit amet metus eleifend, id lacinia ligula fermentum. Mauris vel orci ut nunc efficitur consequat vel in nisi.
 </p >
-    <a class="enlaceps5" href="ps5.html">Comprar PS5</a>
+    <a class="enlaceps5" href="https://www.casadellibro.com/libro-programacion-edicion-2021/9788428342865/12358307?campaignid=17496929720&gad_source=1&gclid=EAIaIQobChMIwKPI0pGmjAMVIzgGAB3EbwMeEAQYAiABEgJHfPD_BwE">Comprar llibre de Programació</a>
     </div>
     <div class="container2">
-    <li class="Nintendo">Nintendo Switch</li>
+    <li class="Nintendo">Perquè aquesta asignatura?</li>
     <img width="300" height="281" id="image2" src="nintendo.jpg" alt="Logo de Nintendo, la creadora de la consola Nintendo Switch">
     <p class="lorem">
     Lorem ipsum dolor sit amet, consectetum adipiscing elit. Sed ac enim vel felis tempor gravida. Vivamus bibendum, ipsum non facilisis tristique, purus arcu tincidunt purus, a auctor sapien ligula at erat. Suspendisse potenti. In hac habitasse platea dictumst. Donec at sollicitudin eros. Aliquam erat volutpat. Integer sagittis turpis sit amet metus eleifend, id lacinia ligula fermentum. Mauris vel orci ut nunc efficitur consequat vel in nisi.
