--- a/index.html
+++ b/index.html
@@ -41,20 +41,23 @@
   <div class="container1">
     <img width="300" height="281" id="image1" src="fotoprog.jpg" alt="Logo de Programació">
 <p class="lorem">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac enim vel felis tempor gravida. Vivamus bibendum, ipsum non facilisis tristique, purus arcu tincidunt purus, a auctor sapien ligula at erat. Suspendisse potenti. In hac habitasse platea dictumst. Donec at sollicitudin eros. Aliquam erat volutpat. Integer sagittis turpis sit amet metus eleifend, id lacinia ligula fermentum. Mauris vel orci ut nunc efficitur consequat vel in nisi.
+ Vols aprendre a ser autòmata i a gestionar els teus projectes de manera fàcil i interessant? A la nostra optativa de Programació i Robòtica,t'endinsaràs en el món del codi d'una manera pràctica 
+  i entretinguda!!
 </p >
     <a class="enlaceps5" href="https://www.casadellibro.com/libro-programacion-edicion-2021/9788428342865/12358307?campaignid=17496929720&gad_source=1&gclid=EAIaIQobChMIwKPI0pGmjAMVIzgGAB3EbwMeEAQYAiABEgJHfPD_BwE">Comprar llibre de Programació</a>
     </div>
     <div class="container2">
-    <li class="Nintendo">Perquè aquesta asignatura?</li>
-    <img width="300" height="281" id="image2" src="nintendo.jpg" alt="Logo de Nintendo, la creadora de la consola Nintendo Switch">
+    <li class="Nintendo">Perquè aquesta assignatura?</li>
+    <img width="300" height="281" id="image2" src="pensando.jpg" alt="Persona pensant, que és el que tu hauries de fer">
     <p class="lorem">
-    Lorem ipsum dolor sit amet, consectetum adipiscing elit. Sed ac enim vel felis tempor gravida. Vivamus bibendum, ipsum non facilisis tristique, purus arcu tincidunt purus, a auctor sapien ligula at erat. Suspendisse potenti. In hac habitasse platea dictumst. Donec at sollicitudin eros. Aliquam erat volutpat. Integer sagittis turpis sit amet metus eleifend, id lacinia ligula fermentum. Mauris vel orci ut nunc efficitur consequat vel in nisi.
+      
+   En aquesta assignatura treballarem la programació i la robòtica des de dos punts de vista diferents, el punt de vista del software i del hardware. Es faran pràctiques combinades 
+      picant codi i interaccionant amb diferents components electrònics
     </p>
-    <a class="enlaceswitch" href="nintendo.html">Comprar Nintendo Switch</a>
+    <a class="enlaceswitch" href="https://www.xataka.com/basics/que-arduino-como-funciona-que-puedes-hacer-uno">Què és Arduino?</a>
     </div>
     <div class="container3" >
-    <li class="pringles">Pringles</li>
+    <li class="pringles">La meva opinió</li>
     <img height="281" width="300" id="image3" src="pringles.jpg" alt="Logo de Pringles, una de las marcas más famosas de chips">
     <p class="lorem">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac enim vel felis tempor gravida. Vivamus bibendum, ipsum non facilisis tristique, purus arcu tincidunt purus, a auctor sapien ligula at erat. Suspendisse potenti. In hac habitasse platea dictumst. Donec at sollicitudin eros. Aliquam erat volutpat. Integer sagittis turpis sit amet metus eleifend, id lacinia ligula fermentum. Mauris vel orci ut nunc efficitur consequat vel in nisi.
