--- a/index.html
+++ b/index.html
@@ -58,25 +58,26 @@
     </div>
     <div class="container3" >
     <li class="pringles">La meva opinió</li>
-    <img height="281" width="300" id="image3" src="pringles.jpg" alt="Logo de Pringles, una de las marcas más famosas de chips">
+    <img height="281" width="300" id="image3" src="opinion.jpg" alt="La meva opinió, des del meu punt de vista.">
     <p class="lorem">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac enim vel felis tempor gravida. Vivamus bibendum, ipsum non facilisis tristique, purus arcu tincidunt purus, a auctor sapien ligula at erat. Suspendisse potenti. In hac habitasse platea dictumst. Donec at sollicitudin eros. Aliquam erat volutpat. Integer sagittis turpis sit amet metus eleifend, id lacinia ligula fermentum. Mauris vel orci ut nunc efficitur consequat vel in nisi.
+     Com a alumne, et recomano que si t'agrada la informática i poder crear els teus programes d'una manera autodidacta, aquesta optativa és la millor opció per a tu. Com a alumne que ha fet aquesta matèria: "Considero
+      que s'aprèn molt i t'emportes experiències que potser amb altres optatives no t'emportaries.""
     </p>
-    <a class="enlacepringles" href="pringles.html">Comprar pringles</a>
+    <a class="enlacepringles" href="https://agora.xtec.cat/ies-joan-oliver/">Web de l'institut</a>
   </ol>
 </section>
-<button id="boton" type="submit">Clicame para mostrar el mensaje de bienvenida</button>
+<button id="boton" type="submit">Clica'm para mostrar el missatge de benvinguda</button>
 <!-- modify this form HTML and place wherever you want your form -->
 <form
   action="https://formsubmit.co/ismfar@escolacalvet.cat"
   method="POST"
 >
   <label>
-    Your email:
+    El teu email
     <input type="email" name="email">
   </label>
   <label>
-    Your message:
+    El teu missatge
     <input type="text" name="message" >
   </label>
   <!-- your other form fields go here -->
@@ -84,7 +85,7 @@
 </form>
   </article>
     <footer>
-  <p class="copyright">Copyright 2024 ♠            <a href="mailto: ismael.faraji.faraji@insjoanoliver.cat " class="contacto">Contáctame aqui</a><a class="retorno" href="#tab">Volver al inicio</a></p>
+  <p class="copyright">Copyright 2024 ♠            <a href="mailto: ismael.faraji.faraji@insjoanoliver.cat " class="contacto">Contácta'm per aqui</a><a class="retorno" href="#tab">Tornar a l'inici</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
