--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
   <table  class="tabla">
     <tr class="filas">
 
-      <th>Producto</th>
-      <th>Dineros</th>
+      <th>Valoració</th>
+      <th>Nota</th>
     </tr>
     <tr class="filas">
-      <td>PS5</td>
-      <td>499.90</td>
+      <td>Mala</td>
+      <td>0-6</td>
     </tr>
     <tr class="filas">
-      <td>Nintendo Switch</td>
-      <td>299.90</td>
+      <td>Mitjana</td>
+      <td>6-8</td>
     </tr>
     <tr class="filas">
-      <td>Pringles</td>
-      <td>1.99</td>
+      <td>Molt bona!!</td>
+      <td>8-10</td>
     </tr>
   </table>
 </section>
