--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="container3" >
     <li class="pringles">La meva opinió</li>
-    <img height="281" width="300" id="image3" src="opinion.jpg" alt="La meva opinió, des del meu punt de vista.">
+    <img height="281" width="300" id="image3" src="baixa.png" alt="La meva opinió, des del meu punt de vista.">
     <p class="lorem">
      Com a alumne, et recomano que si t'agrada la informática i poder crear els teus programes d'una manera autodidacta, aquesta optativa és la millor opció per a tu. Com a alumne que ha fet aquesta matèria: "Considero
       que s'aprèn molt i t'emportes experiències que potser amb altres optatives no t'emportaries.""
