--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <p id="tab"></p>
   <article class="completo">
-<h1 id="titulo" class="title">Mi propio portfolio: <em>hecho por mí, Ismael.</em></h1>
+<h1 id="titulo" class="title">El meu propi portfoli: <em>fet per mí, Ismael.</em></h1>
 <section class="precios">
   <table  class="tabla">
     <tr class="filas">
@@ -36,7 +36,7 @@
 <section class="explicaciones">
   <ol class="elementos">
     <li class="ps5">Què és?</li>
-    <p class="explicacion_ps5">Hola, em dic Ismael y aquesta és la meva web sobre l'optativa de programació de l'Institut Joan Oliver, que per cert,<strong>és la meva metèria preferida</strong> i un hobby meu.</p>
+    <p class="explicacion_ps5">Hola, em dic Ismael y aquesta és la meva web sobre l'optativa de programació de l'Institut Joan Oliver, que per cert,<strong>és la meva matèria preferida</strong> i un hobby meu.</p>
   
   <div class="container1">
     <img width="300" height="281" id="image1" src="fotoprog.jpg" alt="Logo de Programació">
@@ -77,7 +77,7 @@
     <input type="email" name="email">
   </label>
   <label>
-    El teu missatge
+    El teu missatge/Valoració
     <input type="text" name="message" >
   </label>
   <!-- your other form fields go here -->
