Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <img height="281" width="300" id="image3" src="baixa.png" alt="La meva opinió, des del meu punt de vista.">
     <p class="lorem">
      Com a alumne, et recomano que si t'agrada la informática i poder crear els teus programes d'una manera autodidacta, aquesta optativa és la millor opció per a tu. Com a alumne que ha fet aquesta matèria: "Considero
-      que s'aprèn molt i t'emportes experiències que potser amb altres optatives no t'emportaries.""
+      que s'aprèn molt i t'emportes experiències que potser amb altres optatives no t'emportaries."
     </p>
     <a class="enlacepringles" href="https://agora.xtec.cat/ies-joan-oliver/">Web de l'institut</a>
   </ol>
